# opstools-ansible

./: .gitignore  .gitreview  .travis.yml  .yamllint  .zuul.yaml  Documentation.txt  Makefile  README.md  README.rst  ansible.cfg  bindep.txt  config.yml  configure_ovirt_hosts_for_metrics.sh  groups  hosts  main.yml  opstools-ansible.spec  opstools-server-installation.py  opstools-server-installation.sh  playbook-post-install.yml  playbook.yml  plugin.spec  project.config  setup.cfg  site.yml  test-requirements.txt  test.yaml  test_firewall.yml  test_fluentd.yml  test_grafana.yml  test_kibana.yml  test_sensu.yml  test_uchiwa.yml  tox.ini
docs/: developers.md  extract-role-docs.py  footer.md  footer.rst  gen-doc.sh  header.md  header.rst  metadata.yml  ovirt-integration.md  tripleo-integration.md
docs/source/: Makefile  conf.py  developers.rst  footer.rst  header.rst  index.rst  metadata.yml  tripleo_integration.rst
filter_plugins/: host_addresses.py  is_ipv6.py
group_vars/: all  all.yml
inventory/: dynamic_ovirt_hosts  hosts  structure
roles/chrony/: README.md  README.rst
roles/collectd/: README.md  README.rst
roles/elasticsearch/: README.rst
roles/firewall/: README.md  README.rst
roles/fluentd/: README.md
roles/grafana/: README.md  README.rst
roles/httpd/: README.md  README.rst
roles/kibana/: README.md  README.rst
roles/prereqs/: README.md  README.rst
roles/rabbitmq/: README.md  README.rst
roles/redis/: README.md  README.rst
roles/repos/: README.md  README.rst
tools/: documentator.py  extract-role-docs.py  parser.py  validate-playbooks
(+291 files in other folders)
