[metadata]
name = opstools-ansible
summary = opstools-ansible - ansible playbooks for installing OpenStack operational tools
description-file =
    README.rst
author = opstools-ansible contributors
home-page = https://github.com/centos-opstools/opstools-ansible
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/opstools-ansible/roles = roles/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True

[build_sphinx]
all-files = 1
warning-is-error = 1
build-dir = docs/build
source-dir = docs/source
